# vulkan-renderer

./: Cargo.toml  build.rs
shaders/: BasicBlockOutlineColor.slang  Color.slang  compile.bat  shader.slang  shader.spv  slang.spv
src/: camera.rs  main.rs  renderer.rs  sync_objects.rs  vertex.rs
src/vulkan/: context.rs  swapchain.rs
