[package]
name = "vulkanrust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
ash = { version = "0.38", default-features = false, features = ["linked", "debug", "std"] }
enum-map = "2.7.3"
image = { version = "0.25.9", default-features = false, features = ["jpeg"] }
nalgebra-glm = {version = "0.20.0", default-features = false, features = ["std"] }
sdl3 = {version = "0.17.3", features = ["ash"]}
